<resources>
    <string name="app_name">FirebaseAuthApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Sign In</string>
    <string name="create_act">Don\'t have an account?</string>
    <string name="etEmail">Email</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="user_email">User Email : </string>
    <string name="user_name">Name : </string>
    <string name="etPassword">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="profile_pic">profile pic</string>
    <string name="need_account">Don\'t have an account yet?</string>
    <string name="alreadyHave">Already have an account?</string>
    <string name="facebook_app_id">109829466388199</string>
    <string name="fb_login_protocol_scheme">ef79d0c44abd7d338a3591665df920c9</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="bottomnav_title_0">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="upload_a_photo">+ Upload a photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="trail_cover">trail cover</string>
    <string name="_2468_55">2468.55</string>
    <string name="mi_away">mi away</string>
    <string name="slider_image">Slider Image</string>
</resources>
