<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@drawable/signinbg">

    <ImageView
        android:id="@+id/sclogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sctrailslogo" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sclogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textColor="#ffffff"/>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_register_account"
        style="@style/viewCustom"
        android:layout_below="@+id/tv_forgot_password"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/create_act"
        android:textSize="20sp"
        android:textColor="#ffffff"/>

</RelativeLayout>