<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.ProfileFragment"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ib_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:background="@drawable/profile_default"
        android:contentDescription="@string/profile_pic"
        android:scaleType="centerCrop" />

    <TableLayout
        android:id="@+id/tl_data"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="405dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/upload_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:text="@string/upload_a_photo"/>


    </TableLayout>

    <TextView
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</LinearLayout>